--- a/sample/LeaderboardPage.fxml
+++ b/sample/LeaderboardPage.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id = "mainframe" xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.LeaderboardPageController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="mainframe" prefHeight="500.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LeaderboardPageController">
+   <children>
+      <Button fx:id="backbutton" layoutX="131.0" layoutY="399.0" mnemonicParsing="false" onAction="#goBackToMainPage" text="Back" />
+      <Label layoutX="180.0" layoutY="250.0" text="Score" />
+      <Label layoutX="65.0" layoutY="250.0" text="Name" />
+      <Label layoutX="180.0" layoutY="162.0" text="Score" />
+      <Label layoutX="65.0" layoutY="162.0" text="Name" />
+      <Label layoutX="180.0" layoutY="85.0" text="Score" />
+      <Label layoutX="65.0" layoutY="85.0" text="Name" />
+   </children>
 </AnchorPane>
